Updated the Website

--- a/about.html
+++ b/about.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>About</title>
+	<title>RS7</title>
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="Webpage_Design.css">
 </head>
 <body>
 
@@ -26,7 +27,7 @@
 
 			<div class="right-side">
 				<div class="brand">
-					<div>My Name</div>
+					<div>Hi! I'm Rishav Kumar</div>
 				</div>
 			</div>
 		</div>
@@ -44,19 +45,30 @@
 					<div class="profile-content-wrapper">
 						<h1>About Me</h1>
 						<p>
-						Hi , I am Rishav , an undergraduate student of Indian Institue of Technology ,
-						Kharagpur. I live in the city of Jamshedpur , Jharkhand. I love problem solving and 
-						doing competitive programming. Recenlty I have enter into the world of open source
-						where I have been working on various projects related to Front End/Back End. 
-
-						I am fascinated by Blockchain Technology and its applications. Currently I am learing about various aspects of Blockchain.
-
-						I also love designing websites and doing a bit of Front End.
-
-						My Hobbies include playing/watching Cricket, hanging out with Friends and solving puzzles.
+						Hi , I am Rishav , an undergraduate student at the Indian Institue of Technology ,
+						Kharagpur.<br>I live in the city of Jamshedpur , Jharkhand. I love problem-solving.
+						I have been doing Competitive<br>Programming for the past 2 years and have participated in 
+						a couple of Programming Contests<br>like Google Kickstart, CodeJam, etc.
+						Recently I have entered into the world of Open-source
+						where<br>I have been working on various projects related to Front End/Back End. 
+						I would love to connect <br>with people who share similar goals.
 						</p>
-						<p>......</p>
 					</div>
+				</div>
+			</div>
+
+			<div class="one-column-wrapper">
+				<div class="">
+
+				</div>
+				<div class="profile-content-wrapper">
+					<h1>Contact Me</h1>
+					<p>
+						<a href="https://www.facebook.com/profile.php?id=100038928571516" class="fa fa-facebook"></a>
+						<a href="https://www.linkedin.com/in/rishav-kumar-abbb63143/" class="fa fa-linkedin"></a>
+						<a href="https://github.com/RisHaV-IITKGP" class="fa fa-github"></a>
+						<a href="mailto:rishabvh1024@gmail.com" class="fa fa-envelope"></a>
+					</p>
 				</div>
 			</div>
 
