--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="Webpage_Design.css">
 </head>
 <body>
 	<div class="container">
@@ -25,70 +25,177 @@
 
 			<div class="right-side">
 				<div class="brand">
-					<div>Rishav Kumar</div>
+					<div>Hi! I'm Rishav Kumar</div>
 				</div>
 			</div>
 		</div>
 
+		<div class="row-odd-wrapper">
 
-
-		<div class="content-wrapper">
-
-			<div class="potfolio-items-wrapper">
-
-				<div class="potfolio-item-wrapper">
-					<div class="potfolio-img-background" style="background-image:url(images/img1.jpg);">
-					</div>
-
-					<div class="img-text-wrapper">
-
-						<div class="logo-wrapper">
-							<img src="images/logos/logo1.jpg">
-						</div>
-
-						<div class="subtitle">
-							Programming Experience
-						</div>
-					</div>
+			<div class="potfolio-item-wrapper">
+				<div class="potfolio-img-background" style="background-image:url(images/img-1.jpg);">
 				</div>
 
+				<div class="img-text-wrapper">
 
-
-				<div class="potfolio-item-wrapper">
-					<div class="potfolio-img-background" style="background-image:url(images/img2.jpg);">
+					<div class="logo-wrapper">
+						<img src="images/logos/logo2.jpg">
 					</div>
 
-					<div class="img-text-wrapper">
-
-						<div class="logo-wrapper">
-							<img src="images/logos/logo2.jpg">
-						</div>
-
-						<div class="subtitle">
-							Academic Achievements
-						</div>
+					<div class="subtitle">
+						Academic Qualifications and Achievements
 					</div>
 				</div>
-
-
-				<div class="potfolio-item-wrapper">
-					<div class="potfolio-img-background" style="background-image:url(images/img3.jpg);">
-					</div>
-
-					<div class="img-text-wrapper">
-
-						<div class="logo-wrapper">
-							<img src="images/logos/logo3.jpg">
-						</div>
-
-						<div class="subtitle">
-							Course Work
-						</div>
-					</div>
-				</div>
-
-
 			</div>
+
+			<div class="description-1">
+				<div class="skills-wrapper">
+					<ul>
+						<li>
+							Indian Institute of Technology , Kharagpur
+							<ul><li>Bachelor of Tecnology in Electronics & ECE (2019 - Present)</li></ul>
+						</li>
+						<li>
+							Competitive Programmer
+							<ul><li>CodeChef</li><li>Codeforces</li></ul>
+						</li>
+						<li>
+							CourseWork
+							<ul>
+								<li>Algorithms</li>
+								<li>Data Structures</li>
+								<li>Basic Electronics</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+		</div>
+		
+		<div class="row-even-wrapper">
+
+			<div class="description-2">
+				<div class="skills-wrapper">
+					<ul>
+						<li>
+							Covid-19 Tracker App
+							<ul>
+								<li>
+									A Progressive Web Application(PWA) build using Ionic and React
+									Framework which tracks<br> the latest Covid-19 cases across the world and
+									displays the data in a organized manner.
+								</li>
+							</ul>
+						</li>
+						<li>
+							Resume Parser
+							<ul>
+								<li>
+									A python based application which uses NLP and regular expressions
+									library to extract various<br>information from the applicant's resume like
+									name, email address, phone number, skills and education degree.
+								</li>
+							</ul>
+						</li>
+						<li>
+							Decentralized Voting using Blockchain Technology
+							<ul>
+								<li>
+									A prototype of a Decentralized App(DApp) build using Ethereum
+									Blockchain Technology <br>which allows voters to vote in an election
+									using a Distributed Ledger Technology (DLT).
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="potfolio-item-wrapper">
+				<div class="potfolio-img-background" style="background-image:url(images/img1.jpg);">
+				</div>
+
+				<div class="img-text-wrapper">
+
+					<div class="logo-wrapper">
+						<img src="images/logos/logo1.jpg">
+					</div>
+
+					<div class="subtitle">
+						Programming Experience / Personal Projects
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="row-skills-wrapper">
+
+			<div class="potfolio-item-wrapper">
+				<div class="potfolio-img-background" style="background-image:url(images/img-3.jpg);">
+				</div>
+
+				<div class="img-text-wrapper">
+
+					<div class="logo-wrapper">
+						<img src="images/logos/logo3.png">
+					</div>
+
+					<div class="subtitle">
+						Skills
+					</div>
+				</div>
+			</div>
+
+			<div class="description-3">
+				<div class="skills-wrapper">
+					<ul>
+						<li>
+							Programming Languages
+							<ul>
+								<li>C++</li>
+								<li>Python</li>
+								<li>JavaScript</li>
+							</ul>
+						</li>
+						<br>
+						<li>
+							Front End
+							<ul>
+								<li>HTML</li>
+								<li>CSS</li>
+								<li>React.js</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="description-3">
+				<div class="skills-wrapper">
+					<ul>
+						<li>
+							Back End
+							<ul>
+								<li>Node.js</li>
+								<li>Python</li>
+								<li>Ionic</li>
+							</ul>
+						</li>
+						<br>
+						<li>
+							Other
+							<ul>
+								<li>Git</li>
+								<li>NLP</li>
+								<li>Blockchain</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+
 		</div>
 
 	</div>
