--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
 						</li>
 						<li>
 							Competitive Programmer
-							<ul><li>CodeChef</li><li>Codeforces</li></ul>
+							<ul>
+								<li>
+									<a href="https://www.codechef.com/users/rishav_iitkgp">CodeChef</a>
+								</li>
+								<li>
+									<a href="https://codeforces.com/profile/rishav_iitkgp">Codeforces</a>
+								</li>
+							</ul>
 						</li>
 						<li>
 							CourseWork
@@ -79,7 +86,7 @@
 				<div class="skills-wrapper">
 					<ul>
 						<li>
-							Covid-19 Tracker App
+							<a href="https://github.com/RisHaV-IITKGP/Covid-19-Tracker">Covid-19 Tracker App</a>
 							<ul>
 								<li>
 									A Progressive Web Application(PWA) build using Ionic and React
@@ -89,7 +96,7 @@
 							</ul>
 						</li>
 						<li>
-							Resume Parser
+							<a href="https://github.com/RisHaV-IITKGP/Resume_Parser">Resume Parser</a>
 							<ul>
 								<li>
 									A python based application which uses NLP and regular expressions
@@ -99,7 +106,7 @@
 							</ul>
 						</li>
 						<li>
-							Decentralized Voting using Blockchain Technology
+							<a href="https://github.com/gurusinb/Decentralized_Voting_System">Decentralized Voting using Blockchain Technology</a>
 							<ul>
 								<li>
 									A prototype of a Decentralized App(DApp) build using Ethereum
