--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
 					<div class="profile-content-wrapper">
 						<h1>About Me</h1>
 						<p>
-						Hi , I am Rishav , an undergraduate student at the Indian Institue of Technology ,
+						Hi , I am Rishav , an undergraduate student at the Indian Institute of Technology ,
 						Kharagpur.<br>I live in the city of Jamshedpur , Jharkhand. I love problem-solving.
 						I have been doing Competitive<br>Programming for the past 2 years and have participated in 
 						a couple of Programming Contests<br>like Google Kickstart, CodeJam, etc.
