--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<ul>
 						<li>
 							Indian Institute of Technology , Kharagpur
-							<ul><li>Bachelor of Tecnology in Electronics & ECE (2019 - Present)</li></ul>
+							<ul><li>Bachelor of Technology in Electronics & ECE (2019 - Present)</li></ul>
 						</li>
 						<li>
 							Competitive Programmer
@@ -91,7 +91,7 @@
 								<li>
 									A Progressive Web Application(PWA) build using Ionic and React
 									Framework which tracks<br> the latest Covid-19 cases across the world and
-									displays the data in a organized manner.
+									displays the data in an organized manner.
 								</li>
 							</ul>
 						</li>
@@ -99,7 +99,7 @@
 							<a href="https://github.com/RisHaV-IITKGP/Resume_Parser">Resume Parser</a>
 							<ul>
 								<li>
-									A python based application which uses NLP and regular expressions
+									A python-based application which uses NLP and regular expressions
 									library to extract various<br>information from the applicant's resume like
 									name, email address, phone number, skills and education degree.
 								</li>
